added a success page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 </head>
 
 <body>
+
+<input type="hidden" name="_next" value="https://jcgilbert70.github.io/email-comtact-form/success.html">
+
     <div class="contact-title">
         <h1>Say Hello</h1>
         <h2>Jeff would love to hear from you</h2>
             <div class="contact-form">
-                <form id="contact-form" action="https://formsubmit.co/jcgilbert70@gmail.com" method="POST"> <!-- </form>action="contact-form-handler.php"> -->
+                <form id="contact-form" action="https://formsubmit.co/cd132a47f80ceb79db6e2de04f589a8e" method="POST"> <!-- </form>action="contact-form-handler.php"> -->
                     <input name="name" type="text" class="form-control" placeholder="Your Name" required>
                     <br>
                     <input name="email" type="email" class="form-control" placeholder="Your Email" required>
@@ -30,9 +33,6 @@
         </div>
     </div>
 </body>
-
-
-
 
 
 
