--- a/success.html
+++ b/success.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="contact-title">
+        <h1>Thank you</h1>
+        <h2>I will get back to you as soon a possible</h2>
+    </div>
 
-    
 </body>
